--- a/index.html
+++ b/index.html
@@ -5,23 +5,39 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>外贸商品展示</title>
     <!-- 引入Bootstrap CSS -->
-    <link href="https://cdn.bootcdn.net/ajax/libs/twitter-bootstrap/5.3.0/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootswatch@5.3.0/dist/litera/bootstrap.min.css" rel="stylesheet">
     <!-- 链接自定义CSS -->
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="container my-5">
         <h1 class="text-center mb-4">我的外贸商品</h1>
+        <div id="carousel" class="carousel slide mb-5" data-bs-ride="carousel">
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="images/banner1.jpg" class="d-block w-100" alt="Banner 1" style="height: 400px; object-fit: cover;">
+              </div>
+              <div class="carousel-item">
+                <img src="images/banner2.jpg" class="d-block w-100" alt="Banner 2" style="height: 400px; object-fit: cover;">
+              </div>
+            </div>
+          </div>
         
         <!-- 商品1 -->
         <div class="row">
             <div class="col-md-4 mb-4">
                 <div class="card">
+                    <div class="card-header position-relative">
+                        <img src="..." class="card-img-top">
+                        <span class="badge bg-success position-absolute top-0 start-0 m-2">Bestseller</span>
+                        <span class="badge bg-danger position-absolute top-0 end-0 m-2">-30%</span>
+                      </div>
                     <img src="images/product1.png" class="card-img-top" alt="商品1">
                     <div class="card-body">
                         <h5 class="card-title">商品名称1</h5>
                         <p class="card-text">这里是商品的详细描述...</p>
-                        <p class="text-danger fw-bold">价格：￥99.99</p>
+                        <p class="price-tag">$19.99</p>
                     </div>
                 </div>
             </div>
@@ -30,8 +46,24 @@
         </div>
     </div>
 </body>
-<footer class="bg-dark text-white text-center py-3 mt-5">
-    <p>联系电话：+86 123-4567-8901</p>
-    <p>邮箱：contact@yourdomain.com</p>
-</footer>
-</html>
+<footer class="bg-dark text-light py-4 mt-5">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-4">
+          <h5>Contact</h5>
+          <ul class="list-unstyled">
+            <li><i class="fab fa-whatsapp me-2"></i>+1 (555) 123-4567</li>
+            <li><i class="fas fa-envelope me-2"></i>sales@yourcompany.com</li>
+          </ul>
+        </div>
+        <div class="col-md-4">
+          <h5>Social Media</h5>
+          <a href="#" class="btn btn-outline-light btn-sm me-2"><i class="fab fa-linkedin"></i></a>
+          <a href="#" class="btn btn-outline-light btn-sm me-2"><i class="fab fa-instagram"></i></a>
+        </div>
+      </div>
+    </div>
+  </footer>
+  
+  <!-- 添加Font Awesome图标库 -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
